<resources>
    <string name="app_name">Body Shape Quiz</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="activity_main_welcome">Would you like to receive advice tailored to your body type? The quiz below is for you:</string>
    <string name="name_input">Please type your name</string>
    <string name="gender_input">Which gender do you identify yourself with:</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="shoulders_question_first">Are your shoulders narrower than your hips?</string>
    <string name="yes">yes</string>
    <string name="equal">equal</string>
    <string name="no">no</string>
    <string name="triangle_body_shape_second">Your body shape is triangle.</string>
    <string name="inverted_triangle_body_shape_third">Your body shape is inverted triangle</string>
    <string name="comment_fourth">We need to place a few more questions to determine your body type...</string>
    <string name="waist_question_fourth">Do you have defined waist?</string>
    <string name="hourglass_body_shape_fifth">Your body shape is hourglass</string>
    <string name="stomach_question_sixth">Is your stomach round and bust full?</string>
    <string name="rectangle_body_shape_seventh">Your body shape is rectangle</string>
    <string name="oval_body_shape_eight">Your body shape is oval</string>
    <string name="find_out_more_button">Find out more...</string>
    <string name="triangle_tops_first">TOPS: Show-off your slender upper body, create a fuller illusion at the right places to balance out the wider hips</string>
    <string name="triangle_bottoms_first">BOTTOMS: Focus on pants which make your lower half look smaller. Dark colors, straight lines are best.</string>
    <string name="triangle_shoes_first">SHOES: Wear heels to lengthen the figure</string>
    <string name="inverted_triangle_tops">TOPS: Go for tops that lighten or slim down your upper half and minimize your broad shoulders, but without erasing your curves or the bust.</string>
    <string name="inverted_triangle_bottoms">BOTTOMS: Aim to balace your upper half adding more curves.</string>
    <string name="inverted_triangle_shoes">SHOES: All of them!</string>
    <string name="comment_first_activity">Your first question...</string>
    <string name="comment_first_activity_welcome">Welcome&#160;</string>
    <string name="comment_first_activity_men"> You are taking the quiz for men body shapes. Your first question...</string>
    <string name="image_descr_inverted_triangle_female">inverted_triangle_female</string>
    <string name="rectangle_tops">TOPS: You want to create more curves, more feminine silouette by defining the waist</string>
    <string name="rectangle_bottoms">BOTTOMS: Aim to add curves in proportion to your upper body look</string>
    <string name="rectangle_shoes">SHOES: All of them!</string>
    <string name="image_descr_rectangle_female">image_descr_rectangle_female</string>
    <string name="oval_tops">TOPS: Find tops which add volume/accentuate your shoulders and bust while defining your waistline</string>
    <string name="oval_bottoms">BOTTOMS: Avoid extra bulkiness</string>
    <string name="oval_shoes">SHOES: All of them!</string>
    <string name="image_descr_oval_female">image_descr_oval_female</string>
    <string name="hourglass_tops">TOPS: Emphasize your feminine figure but try to avoid appearing heavy</string>
    <string name="hourglass_bottoms">BOTTOMS: All of them! But not all of them will go with all tops.</string>
    <string name="hourglass_shoes">SHOES: Stilettos will make you look THE classic</string>
    <string name="image_descr_hourglass">image_descr_hourglass</string>
    <string name="inverted_triangle_men_tops">TOPS: Wear horizontal stripes (from the chest down). Wear slim-fit shirts (size up!). Slim cotton polo shirt (with a spandex mix) will look good as well as regular (not plunging!) V-neck T-shirts (the collar shape has a narrowing influence on your chest).</string>
    <string name="inverted_triangle_men_bottoms">BOTTOMS: Wear straight-leg trousers/jeans (slim fit). But stay away from skinny jeans. Choose patterned pants, camo shorts or checked trousers.</string>
    <string name="image_descr_inverted_triangle_male">image_descr_inverted_triangle_male</string>
    <string name="image_descr_trapezoid_male">image_descr_trapezoid_male</string>
    <string name="trapezoid_tops">TOPS: Shirts with vertical stripes will make you appear taller. Checks and plaids add horizontal bulk. Choose which one you need based on your height. Wear a blazer or suit jacket tapering your waist, your stomach will look slimmer and your shoulders broader.</string>
    <string name="trapezoid_bottoms">BOTTOMS: All patterns and colours are good, go for slim fit, skip buggy trousers.</string>
    <string name="trapezoid_body_shape">Your body shape is trapezoid. Please see below for best style practices.</string>
    <string name="rectangle_body_shape_men">Your body shape is rectangle</string>
    <string name="rectangle_tops_men">TOPS: Wear horizontal stripes. Jackets with structured shoulders will look good on you, as well as layered looks: shirt + fine-gauge crew neck jumper</string>
    <string name="rectangle_bottoms_men">BOTTOMS: All looks good!</string>
    <string name="comment_fifth_men">We need to ask you a few more questions to determine your body shape.</string>
    <string name="question_fifth_men">Are your hips wider than the shoulders?</string>
    <string name="question_first_men">Are your shoulders the widest part of your body?</string>
    <string name="question_fourth_men">Do you have a very slim waist (in proportion to your upper body)?</string>
    <string name="oval_body_shape_men">Your body shape is oval</string>
    <string name="oval_tops_men">TOPS: Wear solid colors, no patterns. Dark, single-breasted, very slightly tapered jackets are best.</string>
    <string name="oval_bottoms_men">BOTTOMS: The waist should be comfortable, you can use braces.</string>
    <string name="comment_seventh_men">One last question.</string>
    <string name="question_seventh_men">Are your shoulders, waist and hips same width?</string>
    <string name="triangle_body_shape_men">Your body shape is triangle</string>
    <string name="triangle_tops_men">TOPS: Wear vertical stripes and bright colors above the waistline on shirts or sweaters. Jackets with structured shoulders and single-brested suits will look good on you.</string>
    <string name="triangle_bottoms_men">BOTTOMS: Wear straight leg / regular fits in solid colours.</string>
    <string name="e_mail_address">Please enter your e-mail address here</string>
    <string name="subscribe_info_box">Would you like to receive more information about your body shape? Please subscribe to our info box below. </string>

</resources>
