<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.EightActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/QuestionBackground"
            android:text="@string/oval_body_shape_eight" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_oval"
                style="@style/ImageBodyShape"
                android:layout_weight="1"
                android:contentDescription="@string/image_descr_oval_female"
                android:src="@drawable/oval_body_shape" />

            <TextView
                android:id="@+id/text_view_tops_oval"
                style="@style/SmallTextBoxes"
                android:layout_toRightOf="@+id/image_view_oval"

                android:text="@string/oval_tops" />

            <TextView
                android:id="@+id/text_views_bottoms_oval"
                style="@style/SmallTextBoxes"
                android:layout_below="@id/text_view_tops_oval"
                android:layout_toRightOf="@+id/image_view_oval"
                android:text="@string/oval_bottoms" />

            <TextView
                style="@style/SmallTextBoxes"
                android:layout_below="@id/text_views_bottoms_oval"
                android:layout_toRightOf="@+id/image_view_oval"
                android:text="@string/oval_shoes" />
        </RelativeLayout>

        <Button
            style="@style/FindOutMoreButton"
            android:text="@string/find_out_more_button"
            android:id="@+id/button_more"/>
    </LinearLayout>
</ScrollView>