<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.SeventhActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/QuestionBackground"
            android:text="@string/inverted_triangle_body_shape_third" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image_view_inv_triangle_m"
                style="@style/ImageBodyShape"
                android:contentDescription="@string/image_descr_inverted_triangle_male"
                android:src="@drawable/inverted_triangle_body_shape_men" />


            <TextView
                android:id="@+id/text_view_inv_triangle_m"
                style="@style/SmallTextBoxes"
                android:layout_toRightOf="@id/image_view_inv_triangle_m"
                android:text="@string/inverted_triangle_men_tops" />

            <TextView
                style="@style/SmallTextBoxes"
                android:layout_below="@id/text_view_inv_triangle_m"
                android:layout_toRightOf="@id/image_view_inv_triangle_m"
                android:text="@string/inverted_triangle_men_bottoms" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_more"
            style="@style/FindOutMoreButton"
            android:text="@string/find_out_more_button" />
    </LinearLayout>
</ScrollView>