<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.FifthActivityMen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="30dp"
            android:text="@string/comment_fifth_men" />

        <TextView
            style="@style/QuestionBackground"
            android:text="@string/question_fifth_men" />

        <LinearLayout style="@style/ThreeIconsLayout">

            <ImageButton
                android:id="@+id/button_yes"
                style="@style/ThreeIcons"
                android:contentDescription="@string/yes"
                android:src="@drawable/icon_likeup" />

            <ImageButton
                android:id="@+id/button_no"
                style="@style/ThreeIcons"
                android:contentDescription="@string/no"
                android:src="@drawable/icon_likedown" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
