<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    >

    <TextView
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/activity_main_welcome"
        android:textSize="20sp"
        android:textColor="#616161"
        />


    <EditText
        style="@style/AppTheme"
        android:id="@+id/insert_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input"
        android:inputType="textCapWords"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:padding="25dp"
        />



    <TextView
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="8dp"
        android:text="@string/gender_input"
        android:textSize="20sp"

        />
    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rgroup_female_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <RadioButton

            style="@style/AppTheme"
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            />
        <RadioButton
            style="@style/AppTheme"
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            />
    </RadioGroup>




        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_quiz"
            android:contentDescription="start"
            android:layout_margin="18dp"
           android:padding="18dp"
            android:textSize="25sp"
           />

</LinearLayout>
</ScrollView>