<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.FirstActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_view"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="30dp"
        />
    <TextView
        style="@style/QuestionBackground"
        android:text="@string/shoulders_question_first"
        />

    <LinearLayout
        style="@style/ThreeIconsLayout">
        <ImageButton
            android:id="@+id/button_yes"
            style="@style/ThreeIcons"
            android:contentDescription="@string/yes"
            android:src="@drawable/icon_likeup"
            />
        <ImageButton
            android:id="@+id/button_no"
            style="@style/ThreeIcons"
            android:contentDescription="@string/no"
            android:src="@drawable/icon_likedown"
            />
        <ImageButton
            android:id="@+id/button_equal"
            style="@style/ThreeIcons"
            android:contentDescription="@string/equal"
            android:src="@drawable/equal"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>