<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/QuestionBackground"
            android:text="@string/triangle_body_shape_second" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription=""
                android:id="@+id/image_view_triangle"
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:scaleType="fitStart"
                android:src="@drawable/triangle_body_shape" />

            <TextView
                android:id="@+id/text_view_tops"
                style="@style/SmallTextBoxes"
                android:layout_toRightOf="@id/image_view_triangle"
                android:text="@string/triangle_tops_first" />

            <TextView
                android:id="@+id/text_view_bottoms"
                style="@style/SmallTextBoxes"
                android:layout_below="@id/text_view_tops"
                android:layout_toRightOf="@id/image_view_triangle"
                android:text="@string/triangle_bottoms_first" />

            <TextView
                style="@style/SmallTextBoxes"
                android:layout_below="@id/text_view_bottoms"
                android:layout_toRightOf="@id/image_view_triangle"
                android:text="@string/triangle_shoes_first" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:background="#FFC107"
            android:text="@string/find_out_more_button" />

    </LinearLayout>
</ScrollView>