<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bodyshapequiz.EightActivityMen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/QuestionBackground"
            android:text="@string/rectangle_body_shape_men" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_rectangle_m"
                style="@style/ImageBodyShape"
                android:contentDescription="image_descr_rectangle_male"
                android:src="@drawable/rectangle_body_shape_men" />


            <TextView
                android:id="@+id/text_view_tops_rectangle_m"
                style="@style/SmallTextBoxes"
                android:layout_toRightOf="@+id/image_view_rectangle_m"
                android:text="@string/rectangle_tops_men" />

            <TextView
                style="@style/SmallTextBoxes"
                android:layout_below="@id/text_view_tops_rectangle_m"
                android:layout_toRightOf="@id/image_view_rectangle_m"
                android:text="@string/rectangle_bottoms_men" />

        </RelativeLayout>

        <Button
            style="@style/FindOutMoreButton"
            android:text="@string/find_out_more_button" />
    </LinearLayout>
</ScrollView>